--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: os
-        path: template-x86_64.iso
+        path: m4xdevOS-x86_64.iso
         retention-days: 3
