--- a/limine.conf
+++ b/limine.conf
@@ -2,7 +2,7 @@
 timeout: 3
 
 # The entry name that will be displayed in the boot menu.
-/Limine Template
+/m4xdevOS
     # We use the Limine boot protocol.
     protocol: limine
 
