Warnings are now considered errors at build time, printf now uses the format attribute for compile time format specifier checking, fixed bug in printf when printing integers larger then 32 bits

--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -10,53 +10,54 @@ override KLD := x86_64-elf-ld
 
 # Internal C flags that should not be changed by the user.
 override KCFLAGS += \
-    -Wall \
-    -Wextra \
-    -std=gnu11 \
-    -nostdinc \
-    -ffreestanding \
-    -fno-stack-protector \
-    -fno-stack-check \
-    -fno-lto \
-    -fno-PIC \
-    -ffunction-sections \
-    -fdata-sections \
-    -g \
-    -pipe \
-    -m64 \
-    -march=x86-64 \
-    -mno-80387 \
-    -mno-mmx \
-    -mno-sse \
-    -mno-sse2 \
-    -mno-red-zone \
-    -mcmodel=kernel
+	-Wall \
+	-Wextra \
+	-Werror \
+	-std=gnu11 \
+	-nostdinc \
+	-ffreestanding \
+	-fno-stack-protector \
+	-fno-stack-check \
+	-fno-lto \
+	-fno-PIC \
+	-ffunction-sections \
+	-fdata-sections \
+	-g \
+	-pipe \
+	-m64 \
+	-march=x86-64 \
+	-mno-80387 \
+	-mno-mmx \
+	-mno-sse \
+	-mno-sse2 \
+	-mno-red-zone \
+	-mcmodel=kernel
 
 # Internal C preprocessor flags that should not be changed by the user.
 override KCPPFLAGS := \
-    -I src \
-    -isystem freestanding-headers \
-    -MMD \
-    -MP
+	-I src \
+	-isystem freestanding-headers \
+	-MMD \
+	-MP
 
 # Internal nasm flags that should not be changed by the user.
 override KNASMFLAGS += \
-    -Wall \
-    -F dwarf\
-    -g \
-    -f elf64\
+	-Wall \
+	-F dwarf\
+	-g \
+	-f elf64\
 	-w-reloc-rel-dword \
 	-w-reloc-abs-dword
 
 # Internal linker flags that should not be changed by the user.
 override KLDFLAGS += \
-    -m elf_x86_64\
-    -nostdlib \
-    -static \
+	-m elf_x86_64\
+	-nostdlib \
+	-static \
 	-g \
-    -z max-page-size=0x1000 \
-    -gc-sections \
-    -T linker-x86_64.ld
+	-z max-page-size=0x1000 \
+	-gc-sections \
+	-T linker-x86_64.ld
 
 # Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
 # object and header dependency file names.
@@ -70,7 +71,7 @@ override HEADER_DEPS := $(addprefix obj-x86_64/,$(CFILES:.c=.c.d) $(ASFILES:.S=.
 # Ensure the dependencies have been obtained.
 override MISSING_DEPS := $(shell if ! test -d freestanding-headers || ! test -f src/cc-runtime.c || ! test -f src/limine.h; then echo 1; fi)
 ifeq ($(MISSING_DEPS),1)
-    $(error Please run the ./get-deps script first)
+	$(error Please run the ./get-deps script first)
 endif
 
 # Default target.
