--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,12 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v4
-    - name: make
-      run: make all
+    - name: Checkout code
+      id: checkout
+      uses: actions/checkout@v4
+    - name: Build
+      id: build
+      uses: maxdevos49/x86_64-elf-toolchain@v0.1.0
     - name: 'Upload Build'
       uses: actions/upload-artifact@v4
       with:
