dwarf_cu_query_func now works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,33 @@
 {
     "nasm.outputFormat": "elf64",
+    "files.associations": {
+        "README": "plaintext",
+        "limine.h": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "array": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "variant": "c",
+        "chrono": "c",
+        "type.h": "c",
+        "elf64.h": "c",
+        "cstddef": "c",
+        "tty.h": "c",
+        "error.h": "c",
+        "heap.h": "c",
+        "system_error": "c",
+        "*.temp": "c",
+        "utility.h": "c",
+        "elf.h": "c",
+        "dwarf.h": "c",
+        "__locale": "c",
+        "__bit_reference": "c",
+        "iterator": "c"
+    },
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, UseTab: Always, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Linux, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 80, AccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false }",
 }
